tests/snapshots/test_AnyNA__fix_output.snap
---
source: tests/test-AnyNA.rs
expression: fix_output
---
ORIGINAL:
=========
any(is.na(x))


NEW:
====
anyNA(x)
