tests/snapshots/test_AnyNA__lint_output.snap
---
source: tests/test-AnyNA.rs
expression: lint_output
---
ORIGINAL:
=========
any(is.na(x))
any(is.na(foo(x)))


NEW:
====
/tmp/test-[...] [1:1] any-na `any(is.na(...))` is inefficient. Use `anyNA(...)` instead.
/tmp/test-[...] [2:1] any-na `any(is.na(...))` is inefficient. Use `anyNA(...)` instead.
